--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^11.3.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-easy-grid": "0.2.2",
